--- a/reservation-service/src/main/resources/application.properties
+++ b/reservation-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=reservation-service
 
 server.port=8082
+spring.config.import=optional:configserver:http://localhost:8888
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_db
 spring.datasource.username=postgres
