--- a/restaurant-service/src/main/resources/application.properties
+++ b/restaurant-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=restaurant-service
 server.port=8081
-
+spring.config.import=optional:configserver:http://localhost:8888
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_db
 spring.datasource.username=postgres
